/*
   Copyright 2025 The Crossplane Authors.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
*/

syntax = "proto3";

package internal.xfn.cached.proto.v1alpha1;

import "apis/apiextensions/fn/proto/v1/run_function.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/crossplane/crossplane/internal/xfn/cached/proto/v1alpha1";

// A CachedRunFunctionResponse is Crossplane's on-disk cache format for a
// RunFunctionResponse.
message CachedRunFunctionResponse {
  // Deadline after which the cached response is no longer valid.
  google.protobuf.Timestamp deadline = 1;

  // The cached response.
  apiextensions.fn.proto.v1.RunFunctionResponse response = 2;
}
